--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -4,7 +4,9 @@
 
 @import 'primeflex/primeflex.scss';
 
-html {
+
+
+#liquidswap-widget {
   font-size: 16px;
   min-height: 100%;
   height: 100%;
@@ -13,7 +15,7 @@ html {
   font-feature-settings: 'ss01' on, 'ss02' on, 'cv01' on, 'cv03' on;
 }
 
-body {
+#liquidswap-widget {
   font-family: var(--font-family),
     -apple-system,
     BlinkMacSystemFont,
