--- a/src/components/TxSettingsOverlay/txSettingsOverlay.scss
+++ b/src/components/TxSettingsOverlay/txSettingsOverlay.scss
@@ -46,7 +46,7 @@
       margin-right: 8px;
     }
 
-    ::v-deep(.p-inputnumber-input) {
+    .p-inputnumber-input {
       height: 32px;
       padding: 3px 24px 3px 10px;
       width: 100%;
