--- a/src/Swap/styles/swapInfo.scss
+++ b/src/Swap/styles/swapInfo.scss
@@ -18,7 +18,7 @@
 }
 
 .swap-info-tab {
-  ::v-deep(.p-accordion-tab) {
+  .p-accordion-tab {
     &.p-accordion-tab-active {
       .p-accordion-header-link {
         background: #24243a !important;
