--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -20,3 +20,4 @@
 @import '../components/TokenAlert/tokenAlert';
 @import '../components/TxSettingsOverlay/txSettingsOverlay';
 @import '../components/UnverifiedTokenDialog/unverifiedTokenDialog';
+@import '../components/InputToggle/inputToggle';
