feat(widget): APT-986 fix expand details menu

--- a/src/Swap/styles/swapInfo.scss
+++ b/src/Swap/styles/swapInfo.scss
@@ -66,6 +66,12 @@
       padding: 0 5px;
     }
   }
+  .p-accordion-header-action {
+    display: flex;
+    &:hover {
+      cursor: pointer;
+    }
+  }
 }
 
 .list {
