--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -12,6 +12,7 @@
   -webkit-font-smoothing: antialiased;
   -webkit-tap-highlight-color: transparent;
   font-feature-settings: 'ss01' on, 'ss02' on, 'cv01' on, 'cv03' on;
+  position: relative;
 }
 
 #liquidswap-widget {
