--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -4,8 +4,7 @@
 
 @import 'primeflex/primeflex.scss';
 
-
-#liquidswap-widget {
+liquid-swap-widget {
   font-size: 16px;
   min-height: 100%;
   height: 100%;
@@ -13,9 +12,6 @@
   -webkit-tap-highlight-color: transparent;
   font-feature-settings: 'ss01' on, 'ss02' on, 'cv01' on, 'cv03' on;
   position: relative;
-}
-
-#liquidswap-widget {
   font-family: var(--font-family),
     -apple-system,
     BlinkMacSystemFont,
@@ -35,11 +31,8 @@
     #0a081e 59.58%
   );
   color: var(--text-color);
-  font-size: 16px;
   padding: 0;
-  margin: 0;
-  min-height: 100%;
-  -webkit-font-smoothing: antialiased;
+  margin: 0 auto;
   -moz-osx-font-smoothing: grayscale;
 
   &.layout-scroll-block {
