--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -4,7 +4,7 @@
 
 @import 'primeflex/primeflex.scss';
 
-liquid-swap-widget {
+liquidswap-widget {
   font-size: 16px;
   min-height: 100%;
   height: 100%;
