feat(wdiget): APT-986 fix build

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,24 +1,16 @@
 //general styles
 @import './theme.scss';
 
+// modals styles
+@import './modals.scss';
+
 //components styles
-@import 'components/steppedDialog';
 @import '../Swap/styles';
-@import '../components/ConnectWalletDialog/connectWalletDialog';
-@import '../components/CopyNotification/copyNotification';
 @import '../components/CurveInfo/curveInfo';
 @import '../components/CurveSwitch/curveSwitch';
-@import '../components/DialogHeader/dialogHeader';
-@import '../components/ImportTokenDialog/importTokenDialog';
 @import '../components/ReservesContainer/reservesContainer';
-@import '../components/SelectTokenDialog/selectTokenDialog';
-@import '../components/SelectTokenDialog/Coins/coinList';
-@import '../components/Steps/SendTransaction/confirmTransaction';
-@import '../components/Steps/SendTransaction/submitTransaction';
 @import '../components/SwapConfirm/styles';
 @import '../components/TokenAlert/tokenAlert';
-@import '../components/TxSettingsDialog/txSettingsDialog';
-@import '../components/UnverifiedTokenDialog/unverifiedTokenDialog';
 @import '../components/InputToggle/inputToggle';
 @import '../components/ToolTip/tooltip';
 
