feat(widget): APT-986 add props to render inside wallet as dapp

--- a/src/styles/modals.scss
+++ b/src/styles/modals.scss
@@ -9,3 +9,5 @@
 @import '../components/DialogHeader/dialogHeader';
 @import '../components/ImportTokenDialog/importTokenDialog';
 @import 'components/steppedDialog';
+@import '../components/InvalidNetworkDialog/invalidNetworkDialog';
+
