--- a/src/components/InputToggle/inputToggle.scss
+++ b/src/components/InputToggle/inputToggle.scss
@@ -7,8 +7,9 @@
   margin-top: -18px;
   margin-bottom: -18px;
   left: calc(50% - 16px);
+  top: -5px;
   background-color: #24243a;
-  border: 6px solid var(--surface-card);
+  border: 5px solid var(--surface-card);
   z-index: 1;
   display: flex;
   align-items: center;
