--- a/src/styles/modals.scss
+++ b/src/styles/modals.scss
@@ -10,4 +10,5 @@
 @import '../components/ImportTokenDialog/importTokenDialog';
 @import 'components/steppedDialog';
 @import '../components/InvalidNetworkDialog/invalidNetworkDialog';
+@import '../components/SelectTokenDialog/managePresets';
 
