--- a/src/components/SelectTokenDialog/Coins/coinList.scss
+++ b/src/components/SelectTokenDialog/Coins/coinList.scss
@@ -10,6 +10,7 @@
   width: 100%;
   display: flex;
   padding: 16px 0;
+  flex-direction: column;
 
   &__input {
     min-width: 100%;
@@ -17,6 +18,14 @@
     border-radius: 16px;
     background: transparent;
     border: 1px solid #36354b;
+  }
+
+  &__label {
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 34px;
+    letter-spacing: 0.44px;
+    color: #e5e4fa;
   }
 }
 
