--- a/src/components/SelectTokenDialog/selectTokenDialog.scss
+++ b/src/components/SelectTokenDialog/selectTokenDialog.scss
@@ -182,3 +182,46 @@
 #preset_menu.p-menu .p-menuitem-link:not(.p-disabled):hover {
   background: #4a495e;
 }
+
+.import-coin-wrap {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  border-radius: 16px;
+  background: #28253e;
+  padding: 12px;
+  margin-top: 15px;
+
+  .img {
+    width: 32px;
+    height: 32px;
+    margin-right: 12px;
+  }
+  .coin-wrap__labels {
+    display: block;
+    margin-right: auto;
+
+    .coin-symbol {
+      margin: 0 0 1px;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 21px;
+      letter-spacing: 0.03em;
+      color: #e5e4fa;
+    }
+
+    .coin-name {
+      margin: 0;
+      font-weight: 400;
+      font-size: 13px;
+      line-height: 18px;
+      letter-spacing: -0.0008em;
+      color: #e5e4fa;
+      opacity: 0.6;
+    }
+  }
+
+  .coin-import {
+    border-radius: 70px;
+  }
+}
