--- a/src/components/Steps/SendTransaction/submitTransaction.scss
+++ b/src/components/Steps/SendTransaction/submitTransaction.scss
@@ -36,7 +36,7 @@
   .p-button {
     width: 20px !important;
     height: 20px !important;
-    padding: 10px;
+    padding: 0px 0px 0px 5px;
     margin-left: auto;
   }
 }
