--- a/src/styles/modals.scss
+++ b/src/styles/modals.scss
@@ -11,4 +11,5 @@
 @import 'components/steppedDialog';
 @import '../components/InvalidNetworkDialog/invalidNetworkDialog';
 @import '../components/SelectTokenDialog/managePresets';
+@import '../components/ContractSwitch/contractSwitch';
 
