--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -70,6 +70,7 @@ p {
   --primary-color: #6e42ca;
   --primary-color-text: #ffffff;
   --accent-success: #039581;
+  --accent-warning: #E67106;
   --accent-error: #c62828;
   --font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI',
     Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
