--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,4 +13,5 @@
 @import '../components/TokenAlert/tokenAlert';
 @import '../components/InputToggle/inputToggle';
 @import '../components/ToolTip/tooltip';
+@import '../components/ButtonToken/buttonToken';
 
