--- a/src/components/ContractSwitch/contractSwitch.scss
+++ b/src/components/ContractSwitch/contractSwitch.scss
@@ -1,6 +1,6 @@
 .list__pool-version-row {
   margin-bottom: 0.5rem;
-  padding: 0 1.25rem;
+  padding: 0 16px;
   font-size: 15px;
   width: 100%;
   display: flex;
