--- a/src/components/CurveInfo/curveInfo.scss
+++ b/src/components/CurveInfo/curveInfo.scss
@@ -16,8 +16,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 0px 1.25rem;
-  margin-bottom: 8px;
+  padding: 0px 8px;
 
   &__curve {
     display: flex;
