--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,4 +14,5 @@
 @import '../components/InputToggle/inputToggle';
 @import '../components/ToolTip/tooltip';
 @import '../components/ButtonToken/buttonToken';
+@import '../components/FrontrunOverlay/frontRunOverlay';
 
