feat(widget): LS-1166 fix styles

--- a/src/components/SwapConfirm/styles/swapPreview.scss
+++ b/src/components/SwapConfirm/styles/swapPreview.scss
@@ -77,6 +77,7 @@
     justify-content: center;
     border: 0;
     height: 44px;
+    background: linear-gradient(90deg, #6E42CA 0%, #8D29C1 100%);
 
     span {
       position: absolute;
