--- a/src/Swap/styles/swapContainer.scss
+++ b/src/Swap/styles/swapContainer.scss
@@ -45,6 +45,10 @@
   margin-bottom: 20px;
 }
 
+.swap-container-wallet {
+  background: transparent;
+}
+
 .carousel-heading {
   font-size: 20px;
   font-weight: 500;
@@ -117,7 +121,7 @@
     height: 54px;
     font-size: 1.1rem;
     font-weight: 500;
-    //background-image: linear-gradient(90deg,#6039b0,#8d29c1 30.44%);
+    background: linear-gradient(90deg, #6E42CA 0%, #8D29C1 100%);
 
     &_warning {
       background: linear-gradient(89.82deg, #e57106 0.08%, #ee5d0c 99.85%);
