--- a/src/components/ButtonToken/buttonToken.scss
+++ b/src/components/ButtonToken/buttonToken.scss
@@ -19,7 +19,7 @@
     font-weight: normal !important;
   }
 
-  img {
+  img, .img {
     width: 24px;
     height: 24px;
     margin-right: 0.5rem;
