--- a/src/Swap/styles/swapContainer.scss
+++ b/src/Swap/styles/swapContainer.scss
@@ -69,7 +69,7 @@
       position: absolute;
       top: -70px;
       right: 64px;
-      z-index: 10;
+      z-index: 9;
 
       button {
         width: 44px;
@@ -85,6 +85,7 @@
         }
       }
     }
+
 
     .swap__row:last-of-type {
       padding: 0 16px 8px;
@@ -151,6 +152,11 @@
 
     &--no-padding {
       padding: 0;
+    }
+
+    &--extra-padding {
+      padding-left: 16px;
+      padding-right: 16px;
     }
   }
 
