feat(widget): LS-1277 add price impact modal

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,4 +15,5 @@
 @import '../components/ToolTip/tooltip';
 @import '../components/ButtonToken/buttonToken';
 @import '../components/FrontrunOverlay/frontRunOverlay';
+@import '../components/PriceImpactWarningDialog/PriceImpactWarningDialog';
 
