feat(input): LS-1288 token not registered

--- a/src/Swap/styles/swapInput.scss
+++ b/src/Swap/styles/swapInput.scss
@@ -11,6 +11,10 @@
     color: #9897AC;
     font-weight: 600;
   }
+
+  .token-tooltip {
+    margin-left: auto;
+  }
 }
 
 .insufficient-input-reserves {
