feat(curveSwitch): adds CurveSwitch styles
related task: ls-1231

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,4 +16,5 @@
 @import '../components/ButtonToken/buttonToken';
 @import '../components/FrontrunOverlay/frontRunOverlay';
 @import '../components/PriceImpactWarningDialog/PriceImpactWarningDialog';
+@import '../styles//components/curveSwitch.scss';
 
