fix(ButtonToken): updates hover styles

--- a/src/components/ButtonToken/buttonToken.scss
+++ b/src/components/ButtonToken/buttonToken.scss
@@ -10,7 +10,7 @@
   color: white;
 
   &:hover {
-    background: linear-gradient(90deg, #015c68 0%, #04a57d 100%);
+    background: linear-gradient(90deg, #015c68 0%, #04a57d 100%) !important;
     color: white;
   }
 
