--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,5 +16,7 @@
 @import '../components/ButtonToken/buttonToken';
 @import '../components/FrontrunOverlay/frontRunOverlay';
 @import '../components/PriceImpactWarningDialog/PriceImpactWarningDialog';
-@import '../styles//components/curveSwitch.scss';
+@import '../styles/components/curveSwitch.scss';
+@import '../components/LSNumberInput/lsNumberInputAutoNumeric.scss';
+@import '../Swap/styles/swapInput';
 
